# magnetbank

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  app.py  node.py  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
config/: __init__.py
deploy/: Caddyfile  magnetbank.service  magnetnode.service
frontend/: .env.example  .gitignore  Makefile  README.md  app.py  magnetbank.service  nginx_howto.md  requirements.txt
frontend/static/css/: styles.css
frontend/static/img/: site.webmanifest
frontend/static/js/: admin.js
frontend/templates/: about.html  add.html  admin.html  base.html  convert.html  details.html  footer.html  header.html  list.html  torrents.html  user.html
node/: README.md  node.py
node/frontend/: Makefile
node/frontend/templates/: convert.html  footer.html
node/frontend/utils/: helpers.py
static/css/: styles.css
static/img/: site.webmanifest
static/js/: admin.js  head.js  keychain.js  torrents.js
templates/: about.html  add.html  admin.html  base.html  convert.html  details.html  edit_results.html  edit_search.html  footer.html  header.html  list.html  torrents.html
tools/: app.py  requirements.txt
tools/config/: __init__.py
tools/node/: LICENSE
tools/node/frontend/: .gitignore
tools/node/frontend/static/js/: torrents.js
tools/node/frontend/templates/: about.html  torrents.html
tools/templates/: edit_search.html  header.html  index.html
tools/utils/: lookup_edits.py
utils/: database.py  helpers.py  import_data.py  lookup_edits.py
